The "insert frame position" button will no longer break in the text line when the brower is too small (https://github.com/blaues0cke/PiSleepTalk/issues/140)

--- a/frontend/public_src/css/sleeptalk.css
+++ b/frontend/public_src/css/sleeptalk.css
@@ -132,6 +132,10 @@
 {
 	width: 100%;
 }
+.table td.frame
+{
+	white-space: nowrap;
+}
 .table td.frame div input
 {
 	width: 68%;
